# irods_testing_environment

./: README.md  cli.py  discovery.py  federate.py  install.py  irods_setup.py  make_zones.py  pyproject.toml  requirements.txt  run_federation_tests.py  run_plugin_tests.py  run_topology_tests.py  run_unit_tests.py  setup_irods.py
compose/: __init__.py  container.py  project.py
compose/cli/: command.py
irods_testing_environment/: context.py  irods_setup.py  odbc_setup.py  services.py  ssl_setup.py  test_manager.py  test_runner.py  test_utils.py  zone_info.py
irods_testing_environment/install/: install.py
irods_testing_environment/setup/: setup_builder.py  setup_input_builder.py
irods_testing_environment/setup/4_2_x/: setup_input_builder.py
irods_testing_environment/setup/4_3_x/: setup_input_builder.py
projects/: docker-compose_database_postgres-10.12.yml  docker-compose_irods-catalog-consumer_centos-7.yml  docker-compose_irods-catalog-consumer_ubuntu-16.04.yml  docker-compose_irods-catalog-consumer_ubuntu-18.04.yml  docker-compose_irods-catalog-provider_centos-7.yml  docker-compose_irods-catalog-provider_ubuntu-16.04.yml  docker-compose_irods-catalog-provider_ubuntu-18.04.yml
projects/rockylinux-8/: Dockerfile
projects/ubuntu-16.04/: Dockerfile
projects/ubuntu-18.04/: Dockerfile
